--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.1",
+    "@angular/animations": "^8.1.1",
+    "@angular/cdk": "^8.0.2",
     "@angular/common": "~8.1.1",
     "@angular/compiler": "~8.1.1",
     "@angular/core": "~8.1.1",
     "@angular/forms": "~8.1.1",
+    "@angular/material": "^8.0.2",
     "@angular/platform-browser": "~8.1.1",
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
+    "bootstrap": "^4.3.1",
     "rxjs": "~6.4.0",
+    "sweetalert": "^2.1.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
